v1/hostnamej-destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hostnamej
spec:
  host: hostnamej
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
