v1/hostnamej-virtualservice-subset.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostnamej
spec:
  hosts:
  - "hostnamej.example.com"
  gateways:
  - hostnamej-gateway
  http:
  - route:
    - destination:
        port:
          number: 8456
        host: hostnamej
        subset: v1
